--- a/set.env
+++ b/set.env
@@ -2,7 +2,7 @@ PREFIXE=.
 LECTURE_AUTO_STATUS=non
 TELECHARGER_AUTO_STATUS=non
 NOM_BOT=Zokou-MD
-LIENS_MENU=LUFFY
+LIENS_MENU=https://files.catbox.moe/vb6lxt.jpg
 PM_PERMIT=non
 MODE_PUBLIC=non
 ETAT=1
